cluster/apps/archivebox/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: archivebox
  labels:
    goldilocks.fairwinds.com/enabled: "true"
