cluster/apps/archivebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: archivebox
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: archivebox
