cluster/apps/archivebox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivebox
  namespace: archivebox
  annotations:
    haproxy.org/whitelist: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "SAMEORIGIN"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "archive.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivebox
                port:
                  number: 8000
  tls:
    - secretName: "${SECRET_PUBLIC_DOMAIN_CERT}"
      hosts:
        - "archive.${SECRET_PUBLIC_DOMAIN}"
